# ml_4fun

./: .gitignore  GEMINI.md  README.md  ev.ipynb  main.py  pyproject.toml  test.csv
data/: GEMINI.md  ev_data.csv  ev_data_model_country.csv  ev_data_only_model.csv  ev_data_vclass_encoding.csv
src/data_deal/: ev.ipynb  main_ev.py  mat_data.py
