[project]
name = "ev-energy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "scipy>=1.17.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]

[tool.uv]
package = true
